[fix] button on mobile

--- a/style.css
+++ b/style.css
@@ -274,6 +274,8 @@ h4 {
     height: 100px;
     gap: 8px;
     padding: 12px;
+    visibility: visible;
+    position: relative;
   }
   
   .button-600-cont button {
